--- a/clear-cache.html
+++ b/clear-cache.html
@@ -47,6 +47,10 @@
             color: #0c5460;
             border: 1px solid #bee5eb;
         }
+        .instructions {
+            margin-top: 30px;
+            text-align: left;
+        }
     </style>
 </head>
 <body>
@@ -62,7 +66,7 @@
         <button onclick="clearAuthOnly()">Clear Auth Data Only</button>
         <button onclick="goToApp()">Go to App</button>
         
-        <div style="margin-top: 30px; text-align: left;">
+        <div class="instructions">
             <h3>What this does:</h3>
             <ul>
                 <li>Clears all localStorage data</li>
